tests/ui/implicit_authority_macro_forms.stderr
error: no rules expected `start`
 --> tests/ui/implicit_authority_macro_forms.rs:3:29
  |
3 | ic_memory::ic_memory_range!(start = 100, end = 109);
  |                             ^^^^^ no rules expected this token in macro call
  |
note: while trying to match `authority`
 --> src/lib.rs
  |
  |     (authority = $authority:literal, start = $start:expr, end = $end:expr $(,)?) => {
  |      ^^^^^^^^^

error: no rules expected `"app.users.v1"`
 --> tests/ui/implicit_authority_macro_forms.rs:6:39
  |
6 |     let _ = ic_memory::ic_memory_key!("app.users.v1", Store, 100);
  |                                       ^^^^^^^^^^^^^^ no rules expected this token in macro call
  |
note: while trying to match `authority`
 --> src/lib.rs
  |
  |     (authority = $authority:literal, key = $stable_key:literal, ty = $label:path, id = $id:expr $(,)?) => {{
  |      ^^^^^^^^^
